# skunkworks-grok-ui

./: .gitignore  CHANGELOG.md  NOTICE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  attachments.ts  contentFormat.ts  contextChips.ts  gitStatus.ts  languages.ts  main.tsx  markdownComponents.tsx  openExternal.ts  pathDisplay.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acp.rs  commands.rs  lib.rs  main.rs  store.rs  terminal.rs  workspace_fs.rs
src/components/: ChatView.tsx  CodeViewer.tsx  Composer.tsx  ConnectionsPanel.tsx  FilesView.tsx  IntermediateWork.tsx  PermissionModal.tsx  RemoteFolderBrowser.tsx  Sidebar.tsx  SubagentPanel.tsx  TerminalPanel.tsx  WorkspaceHeader.tsx
