[package]
name = "skunkworks-grok-ui"
version = "0.3.1"
description = "Unofficial skunkworks desktop UI for Grok Build via ACP. Not affiliated with xAI."
authors = ["kdewald"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/kdewald/skunkworks-grok-ui"
readme = "../README.md"
keywords = ["grok", "acp", "tauri", "desktop", "agent"]
categories = ["development-tools", "gui"]

[lib]
name = "skunkworks_grok_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.5", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0.103"
parking_lot = "0.12.5"
dirs = "6.0.0"
which = "8.0.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-clipboard-manager = "2.3.2"
base64 = "0.22.1"
portable-pty = "0.9.0"
